# PyNumeca

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  rotor_g_v4.geomTurbo  sample_script.py  setup.py
.github/workflows/: python-app.yml
Notebooks/: bezier3d.ipynb
PyNumeca/: __init__.py  __main__.py  constants.py  pynumeca.py
PyNumeca/fine/: __init__.py  fine.py  utils.py
PyNumeca/igg/: __init__.py  igg.py  utils.py
PyNumeca/postprocessing/: __init__.py  d3d.py  mf.py  plan.py  res.py
PyNumeca/preprocessing/: __init__.py  bezier3d.py  bezier_geomturbo.py  turbo.py
PyNumeca/reader/: __init__.py  geomturbo.py  iecEntry.py  iecGroup.py  niBladeGeometryEntry.py  numecaEntry.py  numecaParser.py  sectionEntry.py  zrCurveEntry.py
PyNumeca/utils/: __init__.py  boundaries.py  geometric.py
pynumeca/: pynumeca.py
pynumeca/fine/: fine.py
pynumeca/igg/: igg.py
pynumeca/postprocessing/: d3d.py  plan.py  res.py
pynumeca/preprocessing/: bezier_geomturbo.py  turbo.py
pynumeca/reader/: __init__.py  geomturbo.py  iecEntry.py  niBladeGeometryEntry.py  numecaEntry.py  numecaParser.py  sectionEntry.py  zrCurveEntry.py
pynumeca/utils/: boundaries.py  units.py
tests/: Rotor37_Autoblade.geomTurbo  template_rotor_g_v4.geomTurbo  test_bezier3d.py  test_postprocessing.py  test_preprocessing.py  test_reading_geomTurbo.py  test_utils.py
tests/data/: C2_Mappe_DB_51_r2_final.geomTurbo  C2_rev4.geomTurbo  FINAL_DOE_400_shuffled.plan  cc_autoblade.geomTurbo  example.mf  rotor_db.geomTurbo
