[tool.poetry]
name = "pynumeca"
version = "0.0.42"
description = "Python interface to Numera family software"
authors = ["GitMarco27 <marco.sanguineti.info@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9, <3.12"
numpy = "^1.24"
plotly = "^5.14"
pandas = "^1.5.3"
scipy = "^1.10.1"
joblib = "^1.2.0"
pyfluids = "^2.3.2"
tqdm = "^4.65.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.5.1"
isort = "^5.12.0"
flake8 = "^6.1.0"
black = "^23.7.0"
pytest = "^7.4.0"
pre-commit = "^3.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
